--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -968,7 +968,7 @@ textarea
   border: 1px solid #ffeeba;
   text-align: center;
   justify-content: center;
-  gap: 2;
+  grid-column: 1 / -1;
 }
 
 .contact_status_icon {
